--- a/Sysc5405-Group-Data-gen.ipynb
+++ b/Sysc5405-Group-Data-gen.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -48,34 +48,66 @@
       "INFO:root:Saved batch 0 with 50 spectrograms\n",
       "INFO:root:Saved batch 1 with 50 spectrograms\n",
       "INFO:root:Saved batch 2 with 50 spectrograms\n",
-      "INFO:root:Saved batch 3 with 4 spectrograms\n",
-      "INFO:root:Saved batch 4 with 50 spectrograms\n",
+      "INFO:root:Saved batch 3 with 50 spectrograms\n",
+      "INFO:root:Saved batch 4 with 10 spectrograms\n",
       "INFO:root:Saved batch 5 with 50 spectrograms\n",
-      "INFO:root:Saved batch 6 with 40 spectrograms\n",
+      "INFO:root:Saved batch 6 with 50 spectrograms\n",
       "INFO:root:Saved batch 7 with 50 spectrograms\n",
       "INFO:root:Saved batch 8 with 50 spectrograms\n",
-      "INFO:root:Saved batch 9 with 40 spectrograms\n",
-      "INFO:root:Saved batch 10 with 50 spectrograms\n",
+      "INFO:root:Saved batch 9 with 50 spectrograms\n",
+      "INFO:root:Saved batch 10 with 16 spectrograms\n",
       "INFO:root:Saved batch 11 with 50 spectrograms\n",
-      "INFO:root:Saved batch 12 with 40 spectrograms\n",
-      "INFO:root:Saved batch 13 with 42 spectrograms\n",
+      "INFO:root:Saved batch 12 with 50 spectrograms\n",
+      "INFO:root:Saved batch 13 with 50 spectrograms\n",
       "INFO:root:Saved batch 14 with 50 spectrograms\n",
       "INFO:root:Saved batch 15 with 50 spectrograms\n",
-      "INFO:root:Saved batch 16 with 40 spectrograms\n",
+      "INFO:root:Saved batch 16 with 30 spectrograms\n",
       "INFO:root:Saved batch 17 with 50 spectrograms\n",
       "INFO:root:Saved batch 18 with 50 spectrograms\n",
-      "INFO:root:Saved batch 19 with 40 spectrograms\n",
+      "INFO:root:Saved batch 19 with 50 spectrograms\n",
       "INFO:root:Saved batch 20 with 50 spectrograms\n",
-      "INFO:root:Saved batch 21 with 34 spectrograms\n",
-      "INFO:root:Saved batch 22 with 28 spectrograms\n",
+      "INFO:root:Saved batch 21 with 50 spectrograms\n",
+      "INFO:root:Saved batch 22 with 30 spectrograms\n",
       "INFO:root:Saved batch 23 with 50 spectrograms\n",
       "INFO:root:Saved batch 24 with 50 spectrograms\n",
       "INFO:root:Saved batch 25 with 50 spectrograms\n",
-      "INFO:root:Saved batch 26 with 32 spectrograms\n",
+      "INFO:root:Saved batch 26 with 50 spectrograms\n",
       "INFO:root:Saved batch 27 with 50 spectrograms\n",
-      "INFO:root:Saved batch 28 with 50 spectrograms\n",
+      "INFO:root:Saved batch 28 with 16 spectrograms\n",
       "INFO:root:Saved batch 29 with 50 spectrograms\n",
-      "INFO:root:Saved batch 30 with 18 spectrograms\n"
+      "INFO:root:Saved batch 30 with 50 spectrograms\n",
+      "INFO:root:Saved batch 31 with 50 spectrograms\n",
+      "INFO:root:Saved batch 32 with 50 spectrograms\n",
+      "INFO:root:Saved batch 33 with 50 spectrograms\n",
+      "INFO:root:Saved batch 34 with 16 spectrograms\n",
+      "INFO:root:Saved batch 35 with 50 spectrograms\n",
+      "INFO:root:Saved batch 36 with 50 spectrograms\n",
+      "INFO:root:Saved batch 37 with 50 spectrograms\n",
+      "INFO:root:Saved batch 38 with 50 spectrograms\n",
+      "INFO:root:Saved batch 39 with 50 spectrograms\n",
+      "INFO:root:Saved batch 40 with 30 spectrograms\n",
+      "INFO:root:Saved batch 41 with 50 spectrograms\n",
+      "INFO:root:Saved batch 42 with 50 spectrograms\n",
+      "INFO:root:Saved batch 43 with 50 spectrograms\n",
+      "INFO:root:Saved batch 44 with 46 spectrograms\n",
+      "INFO:root:Saved batch 45 with 50 spectrograms\n",
+      "INFO:root:Saved batch 46 with 50 spectrograms\n",
+      "INFO:root:Saved batch 47 with 50 spectrograms\n",
+      "INFO:root:Saved batch 48 with 50 spectrograms\n",
+      "INFO:root:Saved batch 49 with 50 spectrograms\n",
+      "INFO:root:Saved batch 50 with 2 spectrograms\n",
+      "INFO:root:Saved batch 51 with 50 spectrograms\n",
+      "INFO:root:Saved batch 52 with 50 spectrograms\n",
+      "INFO:root:Saved batch 53 with 50 spectrograms\n",
+      "INFO:root:Saved batch 54 with 50 spectrograms\n",
+      "INFO:root:Saved batch 55 with 50 spectrograms\n",
+      "INFO:root:Saved batch 56 with 30 spectrograms\n",
+      "INFO:root:Saved batch 57 with 50 spectrograms\n",
+      "INFO:root:Saved batch 58 with 50 spectrograms\n",
+      "INFO:root:Saved batch 59 with 50 spectrograms\n",
+      "INFO:root:Saved batch 60 with 50 spectrograms\n",
+      "INFO:root:Saved batch 61 with 50 spectrograms\n",
+      "INFO:root:Saved batch 62 with 2 spectrograms\n"
      ]
     }
    ],
@@ -84,7 +116,7 @@
     "# Set up logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "\n",
-    "root_dirs = [\"~/Documents/Data/Birds/2022/\"]\n",
+    "root_dirs = [\"~/Documents/Data/Birds/2023/\"]\n",
     "locations = [\"BRY\", \"CAL\", \"FIO\", \"HAR\", \"KEA\", \"LAW\", \"LIF\", \"MCK\", \"PEN\", \"SYL\", \"WAT\"]\n",
     "\n",
     "n_fft = 256  \n",
@@ -165,7 +197,7 @@
     "    for location in locations:\n",
     "        location_dir = os.path.join(os.path.expanduser(root_dir), location)\n",
     "        audio_dir = os.path.join(location_dir, \"MP3\")  \n",
-    "        labels_file = os.path.join(location_dir, \"train_labels.csv\")\n",
+    "        labels_file = os.path.join(location_dir, \"test_labels.csv\")\n",
     "\n",
     "        if not os.path.exists(labels_file):\n",
     "            logging.warning(f\"Labels file not found: {labels_file}\")\n",
@@ -201,15 +233,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded all spectrograms with shape: (1358, 93, 2584)\n",
-      "Loaded all labels with shape: (1358, 10)\n"
+      "Loaded all spectrograms with shape: (2828, 93, 2584)\n",
+      "Loaded all labels with shape: (2828, 10)\n"
      ]
     }
    ],
@@ -236,20 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"spectrograms-4.npy\", all_spectrograms)\n",
-    "np.save(\"labels-4.npy\", all_labels)"
+    "np.save(\"spectrograms-test.npy\", all_spectrograms)\n",
+    "np.save(\"labels-test.npy\", all_labels)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
